<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--Logout head-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cavs_accent_material_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cavs_10dp_spacing"
            android:text="@string/cavs_logout_header"
            android:textColor="@color/cavs_primary_text_light"
            android:textSize="@dimen/cavs_large_text_size" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cavs_primary_dark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/cavs_10dp_spacing"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/cavs_10dp_spacing"
            android:paddingTop="@dimen/cavs_10dp_spacing"
            android:text="@string/cavs_logout_message"
            android:textAlignment="center"
            android:textColor="@color/cavs_neutral"
            android:textSize="@dimen/cavs_general_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="@dimen/cavs_medium_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cavs_10dp_spacing"
                android:layout_weight="1"
                android:background="@drawable/button_style_neutral"
                android:text="@string/cavs_btn_yes"
                android:textColor="@color/cavs_primary_text_dark"
                android:textSize="@dimen/cavs_medium_button_text" />


            <Button

                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/cavs_medium_button_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cavs_10dp_spacing"
                android:layout_weight="1"
                android:background="@drawable/button_style_neutral"
                android:text="@string/cavs_btn_cancel"
                android:textColor="@color/cavs_primary_text_dark"
                android:textSize="@dimen/cavs_medium_button_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>